--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+          <style>
+            html, body {
+                width: 400px;
+                height: 480px;
+                margin: 0;
+                padding: 0;
+                background-color: white;
+            }
+            #container {
+                width: inherit;
+                height: inherit;
+                margin: 0;
+                padding: 0;
+                background-color: pink;
+            }
+            h1 {
+                margin: 0;
+                padding: 0;
+                color: red;
+            }
+        </style>
 <title> 3DS Crap </title>
 </head>
 <body>
