--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
                 height: 480px;
                 margin: 0;
                 padding: 0;
-                background-color: white;
+                background-color: black;
             }
             #container {
                 width: inherit;
                 height: inherit;
                 margin: 0;
                 padding: 0;
-                background-color: pink;
+                background-color: white;
             }
             h1 {
                 margin: 0;
