--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-
+          <style>
+            html, body {
+                width: 400px;
+                height: 480px;
+                margin: 0;
+                padding: 0;
+                background-color: black;
+            }
+            #container {
+                width: inherit;
+                height: inherit;
+                margin: 0;
+                padding: 0;
+                background-color: white;
+            }
+            h1 {
+                margin: 0;
+                padding: 0;
+                color: red;
+            }
+        </style>
 <title> 3DS Crap </title>
 </head>
 <body>
