--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 padding: 0;
                 color: red;
             }
+            h2 {
+               margin: 0;
+               padding: 0;
+               color: green;
+            }
         </style>
 <title> 3DS Crap </title>
 </head>
