--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
                padding: 0;
                color: green;
             }
+            a {
+              color: blue;
+            }
         </style>
 <title> 3DS Crap </title>
 </head>
 <body>
 <h1> Hello, World! </h1>
-          <h2>T e s t i n g</h2>
+<h2>T e s t i n g</h2>
+<a href='javascript:alert('Browserhax 11.6')'>Free Hax</a>
 </body>
 </html>
